# GaussianLib

./: .gitignore  CMakeLists.txt  FindGaussianLib.cmake  README.md
cmake/: FindGaussianLib.cmake
docu/GettingStarted/: .gitignore  Getting Started with GaussianLib.tex
include/Gauss/: AffineMatrix.h  AffineMatrix3.h  AffineMatrix4.h  Algebra.h  Algebra_SSE.h  Algebra_SSE2.h  Assert.h  Compare.h  Config.h  Conversions.h  Decl.h  DefConsts.h  Details.h  Determinant.h  Epsilon.h  Equal.h  Equals.h  Flip.h  GLSLTypes.h  Gauss.h  HLSLTypes.h  Inverse.h  LookAt.h  Macros.h  Matrix.h  MatrixInitializer.h  OStream.h  Projection.h  ProjectionMatrix4.h  Quaternion.h  Quaternion_SSE.h  Real.h  Rotate.h  RotateVector.h  ScalarType.h  Scale.h  SparseMatrix4.h  Spherical.h  StdMath.h  Swizzle.h  (+24 more)
test/: .gitignore  test1.cpp  test1.h  test1_main.cpp
